mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     </head>
 
     <body>
-
+        <div>
+           <img  src="momo.jpg" alt="Image">
+           <h1>ADJE Ola</h1>
+             <p>
+                Je suis un Etudient en l2 SRS G1. je suis pationner de l'informatique depuis totu petit. 
+             </p>
+                    
+              <a href="">Me Connaitre</a>
+        </div>
     </body>
 </html>
