mise en place de la section formations

--- a/index.html
+++ b/index.html
@@ -17,5 +17,16 @@
                     
               <a href="">Me Connaitre</a>
         </div>
+        <div>
+             <h2>Formation</h2>
+             <ul> 2022 deuxieme année d'universite</ul>
+             <ul> 2021 premiere année d'universite</ul>
+            
+             <ul> 2020 Obtention du bac </ul>
+             <ul> 2013 Obtention du BEPC</ul>
+             <ul> 2009 Obtention du CEP</ul>
+
+
+        </div>
     </body>
 </html>
